[build-system]
requires = ["setuptools","setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "NeoQuantum"
description = "NeoBinder/ Yuxinshuo tech quantum chemistry kit"
authors = [
  { name="Yilang Hu"},
  { name = "Xinhao Han"}
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
  "pyscf",
  "pint"
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.dynamic]
version = {attr = "neoqm.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/NeoBinder/NeoQuantum"
Issues = "https://github.com/NeoBinder/NeoQuantum/issues"

[tool.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"